Replace jdom by dom4j